# luxseed

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
assets/luxseed-rhi-test/: hello_world.frag  hello_world.vert
crates/lib/luxseed-ecs/: Cargo.toml
crates/lib/luxseed-ecs/src/: archetype.rs  bundle.rs  component.rs  entity.rs  entity_ref.rs  lib.rs  storage.rs  unsafe_world_cell.rs  world.rs
crates/lib/luxseed-ecs/src/storage/: any_vec.rs  mod.rs  storages.rs
crates/lib/luxseed-render-backend/: Cargo.toml
crates/lib/luxseed-render-backend/examples/: depth_buffer.rs  rotating_quad.rs
crates/lib/luxseed-render-backend/src/: define.rs  enums.rs  flag.rs  lib.rs
crates/lib/luxseed-render-backend/src/vulkan/: buffer.rs  command.rs  descriptor.rs  device.rs  framebuffer.rs  image.rs  mod.rs  pipeline.rs  render_pass.rs  shader.rs  surface.rs  swapchain.rs  sync.rs  util.rs
crates/lib/luxseed-render-graph/: Cargo.toml
crates/lib/luxseed-render-graph/src/: context.rs  edge.rs  graph.rs  lib.rs  node.rs  resource.rs
crates/lib/luxseed-rhi/: Cargo.toml
crates/lib/luxseed-rhi/src/: define.rs  enums.rs  flag.rs  lib.rs  pool.rs
crates/lib/luxseed-rhi/src/vulkan/: buffer.rs  command.rs  descriptor.rs  device.rs  framebuffer.rs  image.rs  instance.rs  mod.rs  pipeline.rs  render_pass.rs  shader.rs  surface.rs  swapchain.rs  sync.rs  util.rs
crates/lib/luxseed-utility/: Cargo.toml
crates/lib/luxseed-utility/src/: lib.rs  pool.rs  resource.rs  sync_unsafe_cell.rs
