[package]
name = "luxseed-render-backend"
version = "0.0.1"
edition = "2021"

[dependencies]
gpu-allocator = "0.24.0"
anyhow = "1.0.70"
bitflags = "2.4.1"
smallvec = "1.11.2"
log = "0.4.17"
raw-window-handle = "0.5.2"
luxseed-utility = { path = "../luxseed-utility" }
# Vulkan
ash = { version = "0.37.2", default-features = false, features = [
    "linked",
    "debug",
] }
ash-window = "0.12.0"

[dev-dependencies]
winit = "0.28.3"
glam = { version = "0.24", default-features = false, features = ["libm"] }
shaderc = "0.8.2"
raw-window-handle = "0.5.2"
image = '0.24.7'