[package]
name = "luxseed-rhi"
version = "0.0.1"
edition = "2021"

[dependencies]
gpu-allocator = "0.24.0"
anyhow = "1.0.70"
log = "0.4.17"
glam = { version = "0.24", default-features = false, features = ["libm"] }
raw-window-handle = "0.5.2"
downcast-rs = "1.2.0"
tinyvec = "1.6.0"
byte-slice-cast = "1.2.2"

# Vulkan
ash = { version = "0.37.2+1.3.238", default-features = false, features = [
    "linked",
    "debug",
] }
ash-window = "0.12.0"
