[package]
name = "luxseed-rhi"
version = "0.0.1"
edition = "2021"

[dependencies]
gpu-allocator = "0.24.0"
anyhow = "1.0.70"
bitflags = "2.4.1"
log = "0.4.17"
raw-window-handle = "0.5.2"

# Vulkan
ash = { version = "0.37.2+1.3.238", default-features = false, features = [
    "linked",
    "debug",
] }
ash-window = "0.12.0"
